// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTMLBarChart should render Progress item based on grid 1`] = `
<div>
  <div
    class="analytics-bar-chart-html format-spacement"
  >
    <div
      class="analytics-bar-chart-html-grid"
    >
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          0
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          500
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          1K
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          1.5K
        </span>
      </div>
    </div>
    <div
      class="analytics-bar-chart-html-group-items"
    >
      <ul
        class="analytics-bar-chart-html-items"
      >
        <li
          class="analytics-bar-chart-html-item"
        >
          <div
            class="analytics-bar-chart-html-header"
          >
            <div
              class="analytics-bar-chart-html-progress"
            >
              <div
                style="background-color: red; width: 33.3%;"
              />
              <div
                style="background-color: blue; width: 33.3%;"
              />
            </div>
            <div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: red; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 1
                  </span>
                </div>
              </div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: green; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`HTMLBarChart should render Progress item based on grid and type of grid is percentage 1`] = `
<div>
  <div
    class="analytics-bar-chart-html format-spacement"
  >
    <div
      class="analytics-bar-chart-html-grid"
    >
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          0%
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          500%
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          1,000%
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          1,500%
        </span>
      </div>
    </div>
    <div
      class="analytics-bar-chart-html-group-items"
    >
      <ul
        class="analytics-bar-chart-html-items"
      >
        <li
          class="analytics-bar-chart-html-item"
        >
          <div
            class="analytics-bar-chart-html-header"
          >
            <div
              class="analytics-bar-chart-html-progress"
            >
              <div
                style="background-color: red; width: 33.3%;"
              />
              <div
                style="background-color: blue; width: 33.3%;"
              />
            </div>
            <div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: red; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 1
                  </span>
                </div>
              </div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: green; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`HTMLBarChart should render Progress with Interval item based on grid and type of grid is percentage 1`] = `
<div>
  <div
    class="analytics-bar-chart-html format-spacement"
  >
    <div
      class="analytics-bar-chart-html-grid"
    >
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          0%
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          500%
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          1,000%
        </span>
      </div>
      <div
        class="analytics-bar-chart-html-grid-item"
      >
        <span>
          1,500%
        </span>
      </div>
    </div>
    <div
      class="analytics-bar-chart-html-group-items"
    >
      <ul
        class="analytics-bar-chart-html-items"
      >
        <li
          class="analytics-bar-chart-html-item"
        >
          <div
            class="analytics-bar-chart-html-header"
          >
            <div
              class="analytics-bar-chart-html-progress"
            >
              <div
                style="background-color: red; width: 33.3%;"
              />
              <div
                style="background-color: blue; width: 33.3%;"
              />
            </div>
            <div
              class="analytics-bar-chart-html-interval"
            >
              <div
                style="margin-left: 26.7%; width: 13.3%;"
              />
              <div
                style="margin-left: 26.7%; width: 13.3%;"
              />
            </div>
            <div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: red; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 1
                  </span>
                </div>
              </div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: green; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`HTMLBarChart should render component without crashing 1`] = `
<div>
  <div
    class="analytics-bar-chart-html format-spacement"
  >
    <div
      class="analytics-bar-chart-html-group-items"
    >
      <ul
        class="analytics-bar-chart-html-items"
      >
        <li
          class="analytics-bar-chart-html-item"
        >
          <div
            class="analytics-bar-chart-html-header"
          >
            <div
              class="analytics-bar-chart-html-progress"
            >
              <div
                style="background-color: red; width: 50%;"
              />
              <div
                style="background-color: blue; width: 50%;"
              />
            </div>
            <div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: red; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 1
                  </span>
                </div>
              </div>
              <div
                class="analytics-bar-chart-html-column"
              >
                <span
                  class="circle"
                  style="background-color: green; height: 32px; width: 32px;"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-home icon-root"
                    role="presentation"
                  >
                    <use
                      href="#home"
                    />
                  </svg>
                </span>
                <div
                  class="text-truncate w-100"
                >
                  <span>
                    item column 2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
